<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".fragments.MainProfileFragment">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mainprofile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mainprofile_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_age"
        android:inputType="number"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mainprofile_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_contact"
        android:inputType="phone"
        app:met_floatingLabel="highlight" />

    <Button
        android:id="@+id/mainprofile_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/text_update" />

</LinearLayout>