<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".SplashActivity">

    <LinearLayout
        android:id="@+id/splash_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_selamat_datang"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_punchline"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/splash_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_above="@id/splash_container1"
        android:layout_centerHorizontal="true"
        android:layout_margin="14dp"
        android:src="@drawable/ic_android_white_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:text="@string/text_version"
        android:textColor="@color/white" />
</RelativeLayout>