<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EventDetailFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/eventdetail_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/eventdetail_title"
                            style="@style/AppTheme.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <include layout="@layout/my_divider" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/eventdetail_location"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:drawableStart="@drawable/ic_place_deep_orange_600_18dp"
                                android:drawableLeft="@drawable/ic_place_deep_orange_600_18dp"
                                android:drawablePadding="6dp"
                                android:maxLines="2"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/eventdetail_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:drawableStart="@drawable/ic_date_range_blue_grey_700_18dp"
                                android:drawableLeft="@drawable/ic_date_range_blue_grey_700_18dp"
                                android:drawablePadding="6dp"
                                android:maxLines="1"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/eventdetail_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:drawableStart="@drawable/ic_access_alarm_blue_grey_700_18dp"
                                android:drawableLeft="@drawable/ic_access_alarm_blue_grey_700_18dp"
                                android:drawablePadding="6dp"
                                android:maxLines="1"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <include layout="@layout/my_divider" />

                        <TextView
                            android:id="@+id/eventdetail_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/montserrat_regular" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/eventdetail_map"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_submit"
                    android:text="@string/text_map"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/eventdetail_join"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_join"
                    android:text="@string/text_join"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>